# toolkit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  README_zh.md  deploy-g10.ps1
.claude/: launch.json
crates/agent-session/: Cargo.toml
crates/agent-session/src/: driver.rs  lib.rs  store.rs  watch.rs
crates/agent-session/tests/: store_tests.rs
crates/agent-session/tests/fixtures/.claude/projects/D--git-github-commit-info-codeloop/: aaaabbbb-cccc-dddd-eeee-000000000009.jsonl  bbbbcccc-dddd-eeee-ffff-000000000010.jsonl
crates/agent-session/tests/fixtures/.codex/: session_index.jsonl
crates/asr-client/: Cargo.toml
crates/asr-client/src/: lib.rs
crates/asr-server/: Cargo.toml  Dockerfile  README.md
crates/asr-server/src/: main.rs  vad.rs
crates/audio-clean-client/: Cargo.toml
crates/audio-clean-client/src/: lib.rs
crates/douyin/: Cargo.toml
crates/douyin/src/: api.rs  callback.rs  client.rs  dashboard.html  download.rs  events.rs  knowledge.rs  lib.rs  list_works_task.rs  main.rs  process.rs  refine.rs  refine_prompt.md  serve.rs  sign.rs
crates/douyin/tests/: live.rs
crates/github-commit-info/: Cargo.toml
crates/github-commit-info/src/: main.rs
crates/github-commit-info/tests/: version.rs
crates/hf-watcher/: Cargo.toml
crates/hf-watcher/src/: api.rs  lib.rs  main.rs  snapshot.rs
crates/rag/: Cargo.toml
crates/rag/deploy/: README.md  rag.config.json
crates/rag/src/: config.rs  embedding.rs  embedding_http.rs  ingest.rs  lib.rs  main.rs  normalize.rs  serve.rs  service.rs  store.rs  store_sqlite.rs  types.rs
crates/toolkit-core/: Cargo.toml
crates/toolkit-core/src/: db.rs  ids.rs  lib.rs  llm_store.rs  migrations.rs  models.rs  schema.rs  url_match.rs
crates/toolkit-core/tests/: migrate.rs  url_match.rs
crates/toolkit-desktop/: Cargo.toml  tauri.conf.json
crates/toolkit-desktop/capabilities/: default.json  login-remote.json
crates/toolkit-desktop/src/: bridge.rs  browser.rs  config.rs  db.rs  main.rs  ths.rs  ths_watcher.rs  uploader.rs  workspace.rs
crates/toolkit-desktop/ui/: app.js  index.html  login_hook.js
crates/toolkit-llm/: Cargo.toml
crates/toolkit-llm/src/: lib.rs
crates/toolkit-server/: Cargo.toml  build.rs
crates/toolkit-server/src/: config.rs  lib.rs  main.rs  state.rs  static_assets.rs
crates/toolkit-server/src/audioforge/: forge.rs  manifest.rs  mod.rs  routes.rs  tts.rs  wav.rs
crates/toolkit-server/src/codeloop/: io.rs  kind.rs  mod.rs  parse.rs  prompt.rs  validate.rs
crates/toolkit-server/src/douyin/: cookie_bridge.rs  kinds.rs  mod.rs  paths.rs  pipeline.rs  refine.rs  routes.rs
crates/toolkit-server/src/llm/: mod.rs  routes.rs
crates/toolkit-server/src/routes/: agent.rs  audio.rs  browser.rs  mod.rs  web.rs
crates/toolkit-server/tests/: audio_forge.rs  douyin_paths.rs  douyin_routes_smoke.rs  douyin_text_refine.rs  http_audio.rs  http_browser_endpoints.rs  http_codeloop.rs  http_health.rs  http_static_web.rs  http_task_lifecycle.rs  llm_config_prompts.rs
crates/toolkit-server/tests/common/: mod.rs
crates/toolkit-server/web/: app.js  codeloop.css  codeloop.html  codeloop.js  hub.css  hub.html  hub.js  index.html  style.css
crates/toolkit-tasks/: Cargo.toml
crates/toolkit-tasks/src/: api.rs  echo.rs  kind.rs  lib.rs  runner.rs  store.rs
crates/toolkit-tasks/tests/: echo_roundtrip.rs  restart_recovery.rs
crates/zero-desktop/: .gitignore  Cargo.toml  tauri.conf.json
crates/zero-desktop/capabilities/: default.json
crates/zero-desktop/migrations/: 0001_init.sql  0002_split_optimize_translate.sql  0003_add_segment_id.sql  0004_add_discard_fields.sql  0005_speech_samples.sql
crates/zero-desktop/src/: app_state.rs  main.rs
crates/zero-desktop/src/modules/: mod.rs
crates/zero-desktop/src/modules/codeloop/: db.rs  mod.rs
crates/zero-desktop/src/modules/cookie/: bridge.rs  db.rs  mod.rs  ths.rs  ths_watcher.rs  uploader.rs
crates/zero-desktop/src/modules/english/: mod.rs
crates/zero-desktop/src/modules/g10_deploy/: mod.rs  registry.rs
crates/zero-desktop/src/modules/llm/: mod.rs
crates/zero-desktop/src/modules/music/: decode.rs  engine.rs  mod.rs  scan.rs  types.rs
crates/zero-desktop/src/modules/music/sink/: cpal.rs  mod.rs  wasapi.rs
crates/zero-desktop/src/modules/net_policy/: config.rs  connections.rs  engine.rs  firewall.rs  mod.rs  process_watch.rs  valid.rs  verify.rs  win.rs
crates/zero-desktop/src/modules/speech/: llm_settings.rs  lock_utils.rs  mod.rs  paste_watch.rs  settings.rs
crates/zero-desktop/src/modules/speech/commands/: clean.rs  device.rs  export.rs  init.rs  mod.rs  notify.rs  recording.rs  remote.rs  samples.rs  settings.rs
crates/zero-desktop/src/modules/speech/db/: mod.rs  repository.rs  schema.rs
crates/zero-desktop/src/modules/speech/legacy/: mod.rs
crates/zero-desktop/src/shared/: console.rs  error.rs  mod.rs  proc.rs  settings.rs  trace.rs  update.rs  workspace.rs
crates/zero-desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/zero-desktop/ui/src/: App.tsx  index.css  main.tsx
crates/zero-desktop/ui/src/modules/audio-clean/: AudioCleanCard.tsx  AudioCleanPage.tsx
crates/zero-desktop/ui/src/modules/chat-summary/: ChatSummaryPage.tsx
crates/zero-desktop/ui/src/modules/codeloop/: CodeloopPage.tsx
crates/zero-desktop/ui/src/modules/cookie/: CookiePage.tsx
crates/zero-desktop/ui/src/modules/english/: EnglishAll.tsx  EnglishAnnotated.tsx  EnglishBootstrap.tsx
crates/zero-desktop/ui/src/modules/g10-deploy/: G10DeployPage.tsx
crates/zero-desktop/ui/src/modules/music/: MiniPlayer.tsx  MusicPage.tsx  PlayerContext.tsx
crates/zero-desktop/ui/src/modules/net-policy/: NetPolicyPage.tsx
crates/zero-desktop/ui/src/modules/settings/: LlmSection.tsx  SettingsPage.tsx
crates/zero-desktop/ui/src/modules/speech/: SpeechPage.tsx
crates/zero-desktop/ui/src/modules/voice/: Toast.tsx  VoiceCommandPanel.tsx  types.ts  useToast.ts  useVoiceChannel.ts  useVoiceConfig.ts  wakeGate.ts
crates/zero-desktop/ui/src/shared/: ErrorBoundary.tsx  ModulePlaceholder.tsx  ShellLayout.tsx
(+92 files in other folders)
