[workspace]
members = ["crates/github-commit-info", "crates/hf-watcher", "crates/douyin"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
# 临时 path 依赖（trace-hub DESIGN §7.6 选项 B）以启用本地 trace feature；发布前改回版本依赖。
custom-utils = { path = "../custom-utils", features = ["updater"] }
anyhow = "1"
sm3 = "0.4"
axum = "0.8"

[profile.release]
strip = true
lto = true
