[workspace]
members = [
    "crates/github-commit-info",
    "crates/hf-watcher",
    "crates/agent-session",
    "crates/codeloop-core",
    "crates/asr-client",
    "crates/audio-clean-client",
    "crates/douyin",
    "crates/rag",
    "crates/toolkit-core",
    "crates/toolkit-tasks",
    "crates/toolkit-llm",
    "crates/toolkit-server",
    "crates/toolkit-desktop",
    "crates/zero-desktop",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"

[workspace.dependencies]
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
custom-utils = { version = "0.15.2", features = ["updater", "trace"] }
anyhow = "1"
sm3 = "0.4"
axum = "0.8"
async-trait = "0.1"
rusqlite = { version = "0.31", default-features = false, features = ["bundled"] }
sqlite-vec = "0.1"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
agent-session = { path = "crates/agent-session" }
codeloop-core = { path = "crates/codeloop-core" }
toolkit-llm = { path = "crates/toolkit-llm" }

[profile.release]
strip = true
lto = true
