[package]
name = "agent-session"
version.workspace = true
edition.workspace = true
description = "Provider-agnostic observation of external coding-agent (Codex / Claude Code) sessions: read on-disk JSONL session stores, parse status/messages/cwd."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["fs", "process", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
