[package]
name = "asr-server"
version.workspace = true
edition.workspace = true

[dependencies]
# workspace 共享版本：与其它 crate 同源，避免重复编译/版本漂移。
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
# custom-utils：workspace 版（已带 trace feature + path patch）。原 streaming-speech
# 仓内用 git rev 是因为 Docker 独立构建无父 workspace；迁入 toolkit 后走 workspace 依赖。
custom-utils = { workspace = true, features = ["trace"] }

# asr-server 专有依赖（暂不进 workspace.dependencies，仅本 crate 用）。
axum = { version = "0.8", features = ["multipart"] }
sherpa-onnx = { version = "1.13.0", default-features = false, features = ["shared"] }
hound = "3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", default-features = false, features = ["stream", "rustls", "http2"] }
futures-util = "0.3"

[[bin]]
name = "asr-server"
path = "src/main.rs"

[features]
default = []
# 与其它 crate 对齐：prod 透传到 custom-utils（日志落文件等）。
prod = ["custom-utils/prod"]
