[package]
name = "github_commit_info"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
clap = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "github-commit-info"
path = "src/main.rs"

[features]
default = []
prod = ["custom-utils/prod"]
