[package]
name = "hf_watcher"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["time"] }
log = { workspace = true }
clap = { workspace = true }
custom-utils = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "hf-watcher"
path = "src/main.rs"

[features]
default = []
prod = ["custom-utils/prod"]
