[package]
name = "rag"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "net"] }
log = { workspace = true }
clap = { workspace = true }
custom-utils = { workspace = true, features = ["trace"] }
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
rusqlite = { workspace = true }
sqlite-vec = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rag"
path = "src/main.rs"

[features]
default = []
prod = ["custom-utils/prod"]
