[package]
name = "toolkit-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
