[package]
name = "toolkit-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["env"] }
url = "2"
sha2 = "0.10"
hex = "0.4"
custom-utils = { workspace = true, features = ["updater"] }
rusqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
headless_chrome = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
prod = ["custom-utils/prod"]

[[bin]]
name = "toolkit-desktop"
path = "src/main.rs"
