[package]
name = "toolkit-server"
version.workspace = true
edition.workspace = true

[dependencies]
toolkit-core = { path = "../toolkit-core" }
toolkit-tasks = { path = "../toolkit-tasks" }
toolkit-llm = { workspace = true }
douyin = { path = "../douyin" }
audio-clean-client = { path = "../audio-clean-client" }
agent-session = { workspace = true }
codeloop-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "signal", "net", "time", "process"] }
async-trait = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
clap = { workspace = true, features = ["env"] }
log = { workspace = true }
custom-utils = { workspace = true, features = ["updater", "trace"] }
rusqlite = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = "3"
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "net", "time"] }

[features]
default = []
prod = ["custom-utils/prod"]

[[bin]]
name = "toolkit-server"
path = "src/main.rs"
