[package]
name = "toolkit-tasks"
version.workspace = true
edition.workspace = true

[dependencies]
toolkit-core = { path = "../toolkit-core" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread", "macros"] }
async-trait = { workspace = true }
log = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread", "macros", "test-util"] }
