[package]
name = "zero-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { workspace = true }
serde_json = { workspace = true }
# codeloop 模块：采集层 agent-session + 协议层 codeloop-core（与 toolkit-server 共享）
agent-session = { workspace = true }
codeloop-core = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "fs", "process", "io-util"] }
anyhow = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["env"] }
dirs = "5"
custom-utils = { workspace = true, features = ["updater", "trace"] }
# Cookie 模块依赖
reqwest = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
rusqlite = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
headless_chrome = "1.0"
tracing = "0.1"
# net-policy 模块依赖（controller secret 随机生成）
rand = "0.8"
# Speech 模块依赖
cpal = "0.16"
tokio-tungstenite = "0.24"
futures-util = "0.3"
# Music 模块依赖（原生音频引擎：解码 / 输出 / 重采样 / 元数据 / 无锁环形缓冲）
symphonia = { version = "0.6", features = [
    "flac", "mp3", "aac", "alac", "isomp4", "ogg", "vorbis", "wav", "pcm",
] }
rubato = "0.16"
rtrb = "0.3"
lofty = "0.24"
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",
] }
wasapi = "0.23"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
prod = ["custom-utils/prod"]

[[bin]]
name = "zero-desktop"
path = "src/main.rs"
